# Marketing-Agents

./: pyproject.toml
marketing_agent/: README.md  email.md  pyproject.toml  report.md
marketing_agent/src/marketing_agent/: crew.py  main.py
marketing_agent/src/marketing_agent/config/: agents.yaml  tasks.yaml
marketing_agent/src/marketing_agent/tools/: custom_tool.py
