[tool.poetry]
name = "marketing agents"
version = "0.1.0"
description = ""
authors = ["Tony Hung <tbass134@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
crewai = {extras = ["tools"], version = "^0.65.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
