[tool.poetry]
name = "marketing_agent"
version = "0.1.0"
description = "marketing_agent using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.65.2,<1.0.0" }


[tool.poetry.scripts]
marketing_agent = "marketing_agent.main:run"
run_crew = "marketing_agent.main:run"
train = "marketing_agent.main:train"
replay = "marketing_agent.main:replay"
test = "marketing_agent.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
